fixed white space issue

--- a/stylesheets/page-style.css
+++ b/stylesheets/page-style.css
@@ -1,6 +1,9 @@
 html, body {
-	margin: 0;
-	padding: 0;
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 	font-family:  "Open sans","Lato", "HelveticaNeue-Light", "Helvetica Neue Light", Arial;
 }
 
@@ -72,6 +75,7 @@ hr {
 
 #headerbuttons {
 	width: 340px;
+	max-width: 100%;
 	height: 100px;
 	margin: 0 auto;
 	margin-top: 120px;
